--- a/colorist/pubspec.yaml
+++ b/colorist/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   meta: ^1.16.0
   colorist_annotations:
     path: ../colorist_annotations
+  shared_preferences: ">=2.4.0 <3.0.0"
 
 dev_dependencies:
   flutter_test:
