--- a/.gitignore
+++ b/.gitignore
@@ -57,6 +57,7 @@ lib/generated_plugin_registrant.dart
 **/android/local.properties
 **/android/**/GeneratedPluginRegistrant.java
 
+
 # iOS/XCode related
 **/ios/**/*.mode1v3
 **/ios/**/*.mode2v3
@@ -85,6 +86,9 @@ lib/generated_plugin_registrant.dart
 **/ios/Flutter/flutter_export_environment.sh
 **/ios/ServiceDefinitions.json
 **/ios/Runner/GeneratedPluginRegistrant.*
+**/project.pbxproj
+**/Runner.xcworkspace/
+**/contentx.xcworkspacedata
 
 # Exceptions to above rules.
 !**/ios/**/default.mode1v3
