--- a/colorist/pubspec.yaml
+++ b/colorist/pubspec.yaml
@@ -2,7 +2,7 @@ name: colorist
 description: "Flutter code generator for custom-named color palettes."
 repository: https://github.com/tara-pogancev/flutter-colorist
 issue_tracker: https://github.com/tara-pogancev/flutter-colorist/issues
-version: 0.0.1
+version: 0.0.1cd ..
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
@@ -19,5 +19,4 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^5.0.0
   build_runner: ^2.9.0
-  colorist_builder:
-    path: ../colorist_builder
+  colorist_builder: ^0.0.1
