--- a/colorist/example/pubspec.yaml
+++ b/colorist/example/pubspec.yaml
@@ -21,8 +21,7 @@ dev_dependencies:
 
   flutter_lints: ^5.0.0
   build_runner: ^2.9.0
-  colorist_builder:
-    path: ../../colorist_builder
+  colorist_builder: ^0.0.1
 
 flutter:
   uses-material-design: true
