--- a/colorist/pubspec.yaml
+++ b/colorist/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   meta: ^1.16.0
   colorist_annotations: ^0.0.1
   shared_preferences: ">=2.4.0 <3.0.0"
+  collection: ^1.19.1
 
 dev_dependencies:
   flutter_test:
