--- a/colorist_annotations/pubspec.yaml
+++ b/colorist_annotations/pubspec.yaml
@@ -2,7 +2,7 @@ name: colorist_annotations
 description: "Annotations package for Colorist - Flutter's custom theme generator package."
 repository: https://github.com/tara-pogancev/flutter-colorist
 issue_tracker: https://github.com/tara-pogancev/flutter-colorist/issues
-version: 0.0.1
+version: 0.0.1+1
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
