--- a/colorist_builder/pubspec.yaml
+++ b/colorist_builder/pubspec.yaml
@@ -2,7 +2,7 @@ name: colorist_builder
 description: "Flutter code generator for custom-named color palettes."
 repository: https://github.com/tara-pogancev/flutter-colorist
 issue_tracker: https://github.com/tara-pogancev/flutter-colorist/issues
-version: 0.0.1
+version: 0.0.1+1
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
