--- a/colorist_builder/pubspec.yaml
+++ b/colorist_builder/pubspec.yaml
@@ -2,13 +2,13 @@ name: colorist_builder
 description: "Flutter code generator for custom-named color palettes."
 repository: https://github.com/tara-pogancev/flutter-colorist
 issue_tracker: https://github.com/tara-pogancev/flutter-colorist/issues
-version: 0.0.1+1
+version: 0.0.1+2
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
-  analyzer: ">=7.5.9 <9.0.0"
+  analyzer: ^9.0.0
   build: ">=3.0.0 <5.0.0"
   source_gen: ">=3.0.0 <5.0.0"
   colorist_annotations: ^0.0.1
